hphp/test/zend/good/ext/posix/tests/posix_isatty.php.skipif
<?php
if (!extension_loaded('posix')) die('skip - POSIX extension not loaded'); 
if (!function_exists('posix_isatty')) die('skip posix_isatty() not found');
?>